--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.link {
+  text-decoration: none;
+  color: white;
+}
+.link:hover {
+  text-decoration: none;
+  color: white;
+}
